Adds theme changing for ActivityFragment'

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,5 +28,16 @@
         android:layout_margin="16dp"
         />
 
+    <Button
+        android:id="@+id/buttonStartLogin"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/buttonStart"
+        android:text="Start LOGIN"
+        android:layout_margin="16dp"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
