--- a/app/src/main/res/layout/fragment_main3.xml
+++ b/app/src/main/res/layout/fragment_main3.xml
@@ -7,6 +7,24 @@
     tools:context=".Main3ActivityFragment"
     tools:showIn="@layout/activity_main3">
 
+    <TextView
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="16dp"
+        android:id="@+id/textview_heading_one"
+        android:text="Heading One"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <TextView
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textview_heading_one"
+        android:layout_margin="16dp"
+        android:id="@+id/textview_heading_two"
+        android:text="Heading two"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <Button
         android:id="@+id/buttonLogin"
         android:layout_width="0dp"
